Title and description updated. Max width added to stop the app from being too wide on bigger screens.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+ max-width: 400px;
+}
+
 .totalLine {
  border-top: double #bbb;
 }
